[package]
name = "hl2html"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
chrono = "0.4.10"
uuid = "0.8.1"
url = "2.1.0"
version-compare = "0.0.10"
