[package]
name = "hl2html"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.5"
bumpalo = { version = "3.7.1", features = ["collections"] }
eyre = "0.6.5"
lalrpop-util = "0.19.6"
lexgen = "0.4.0"
regex = "1"
chrono = "0.4.10"
uuid = "0.8.1"
url = "2.1.0"
serde = "1.0.130"
serde_json = "1.0.59"
version-compare = "0.0.10"

[build-dependencies]
lalrpop = { version = "0.19.6", git = "https://github.com/lalrpop/lalrpop", rev = "d09a143" }
